added server/client communication types & classes
created Message class for building Messages from a specified outline of details (or message "subtypes")
created MessageType enums (Request, Share, Reply, Success, Error, Failure)
created messageFactory to generate
created RoomDetail enums to specify different categories of room-related messaging
created several room messaging classes

started App.css file for testing communications
started server testing environment

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "tsc --alwaysStrict --noEmitOnError --pretty && vite",
+    "build": "tsc -w && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
