--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,25 @@
   "name": "server",
   "version": "1.0.0",
   "description": "server",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "ts-node server.ts"
   },
   "author": "gitpushjoe",
   "license": "ISC",
   "dependencies": {
+    "commonjs": "^0.0.1",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.21"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "nodemon": "^2.0.21",
+    "socket.io": "^4.6.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
+    "typescript": "^4.9.5"
   }
 }
