--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,16 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "js-cookie": "^3.0.1",
     "nodemon": "^2.0.21",
     "socket.io": "^4.6.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.14.6",
     "typescript": "^4.9.5"
   }
