--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ dist-ssr
 pre/venv
 pre/clues.tsv
 server/socket.txt
+pre/crosswords/medium.txt
+pre/crosswords/mini.txt
+pre/__pycache__/color_text.cpython-311.pyc
+pre/__pycache__/main.cpython-311.pyc
+pre/__pycache__/main.cpython-311.pyc
+pre/__pycache__/main.cpython-311.pyc
