--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
+    "@types/node": "^18.15.10",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
