started work on frontend
fleshed out backend communications
reorganized files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ pre/__pycache__/color_text.cpython-311.pyc
 pre/__pycache__/main.cpython-311.pyc
 pre/__pycache__/main.cpython-311.pyc
 pre/__pycache__/main.cpython-311.pyc
+pre/banned.txt
+
+pre/crosswords
