--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-hamburger-menu": "^1.2.1",
+    "react-icons": "^4.8.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.10",
     "@types/react": "^18.0.27",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.0.10",
+    "@types/react-hamburger-menu": "^0.0.4",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
